# melon

./: .cspell.json  .dvcignore  .envrc  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  404.html  CHANGELOG.md  Justfile  README.md  __builtins__.pyi  index.html  mkdocs.yaml  noxfile.py  objects.inv  prompt.md  pyproject.toml  pyrightconfig.json  sitemap.xml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml  python.just
.config/copier/direnv/: 10-python.sh
.config/copier/mise/scripts/: setup-python.sh
.config/copier/mise/tasks/: bench.sh  install.sh  test.sh  upgrade.sh
.config/linters/: .ruff.toml
.config/mise/: config.toml
.config/mise/conf.d/: 00-python.toml  50-python.toml
.config/release-please/: .manifest.json  config.json
.dvc/: config
.github/workflows/: bench.yaml  docs-dev.yaml  docs-stable.yaml  docs-test.yaml  docs.yaml  mega-linter.yaml  python-bench.yaml  python-release.yaml  python-test.yaml  release-pr.yaml  release-publish.yaml  release.yaml  test.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/SUMMARY/: index.html
0.1/api/SUMMARY/: index.html
0.1/api/liblaf/melon/: index.html
0.1/api/liblaf/melon/cli/: index.html
0.1/api/liblaf/melon/io/: index.html
0.1/api/liblaf/melon/ops/: index.html
0.1/api/liblaf/melon/plugin/: index.html
0.1/api/liblaf/melon/struct/: index.html
0.1/api/liblaf/melon/tetra/: index.html
0.1/api/liblaf/melon/triangle/: index.html
0.1/api/liblaf/melon/typed/: index.html
0.1/search/: search_index.json
SUMMARY/: index.html
api/SUMMARY/: index.html
api/liblaf/melon/: index.html
api/liblaf/melon/barycentric/: index.html
api/liblaf/melon/cli/: index.html
api/liblaf/melon/io/: index.html
api/liblaf/melon/io/abc/: index.html
api/liblaf/melon/io/dispatcher/: index.html
api/liblaf/melon/io/melon/: index.html
api/liblaf/melon/io/paraview/: index.html
api/liblaf/melon/io/pyvista/: index.html
api/liblaf/melon/io/trimesh/: index.html
api/liblaf/melon/io/wrap/: index.html
api/liblaf/melon/mesh/: index.html
api/liblaf/melon/ops/: index.html
api/liblaf/melon/ops/correspondence/: index.html
api/liblaf/melon/ops/pyvista/: index.html
api/liblaf/melon/plugin/: index.html
api/liblaf/melon/proximity/: index.html
api/liblaf/melon/struct/: index.html
api/liblaf/melon/tetra/: index.html
api/liblaf/melon/triangle/: index.html
api/liblaf/melon/typed/: index.html
api/liblaf/melon/utils/: index.html
assets/javascripts/: bundle.13a4f30d.min.js
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/api/SUMMARY/: index.html
dev/api/liblaf/melon/: index.html
dev/search/: search_index.json
docs/: README.md
docs/reference/liblaf/melon/: README.md
examples/: series-writer.py  series.py
exp/: .envrc  .mise.toml
exp/complete-human-head-anatomy/src/: 01-extract-group-names.py  02-extract-groups.py  04-skin-register.py  05-tetgen.py  06-tetgen-clean.py  07-find-mandible-pivots.py
exp/full-human-head-anatomy/src/: 01-extract-groups.py  01-parse-groups.py  02-extract-groups.py  02-fix-muscles.py  02-fix-skeletons.py  02-fix-skin.py  03-register-skin.py  03-tetgen.py
exp/template/src/: 00-rigid-align-mandible.py
reference/liblaf/melon/: index.html
reference/liblaf/melon/barycentric/: index.html
reference/liblaf/melon/cli/: index.html
reference/liblaf/melon/io/: index.html
reference/liblaf/melon/mesh/: index.html
reference/liblaf/melon/plugin/: index.html
reference/liblaf/melon/proximity/: index.html
reference/liblaf/melon/tetra/: index.html
reference/liblaf/melon/tri/: index.html
reference/liblaf/melon/triangle/: index.html
reference/liblaf/melon/typed/: index.html
reference/liblaf/melon/typing/: index.html
reference/liblaf/melon/utils/: index.html
scripts/: bench-cell-neighbors.py  bench-contains.py  bench-on-surface.py
search/: search_index.json
src/liblaf/melon/: __init__.py  __init__.pyi  _version.pyi
src/liblaf/melon/_src/: __init__.pyi  graph.py
src/liblaf/melon/bary/: __init__.py  _sample.py
src/liblaf/melon/barycentric/: _points.py
src/liblaf/melon/cli/: __init__.py  _annotate_landmarks.py  _app.py
src/liblaf/melon/ext/: __init__.py  _mesh_fix.py  _meshfix.py  _tetwild.py
src/liblaf/melon/io/: __init__.py  __init__.pyi  _save.py
src/liblaf/melon/mesh/: __init__.pyi
src/liblaf/melon/plugin/: __init__.pyi  _mesh_fix.py  _tetwild.py
src/liblaf/melon/proximity/: _nearest_point.py  _nearest_point_on_surface.py
src/liblaf/melon/recipe/: __init__.py  fractions.py
src/liblaf/melon/scene/: __init__.py  _scene.py  _subscene.py
src/liblaf/melon/tet/: __init__.py  _compute.py  _repair.py  _tetra_center_radius.py  _tetra_surface_broad_phase.py  _tetra_surface_fraction.py  _volume_fraction.py
src/liblaf/melon/transfer/: __init__.pyi  _tri_cell_to_point_category.py  _tri_point.py  _tri_point_to_point.py
src/liblaf/melon/tri/: __init__.py  __init__.pyi  _contains.py  _edge.py  _extract.py  _fill_point.py  _geodestic.py  _group.py  _implicit_distance.py  _mesh_query_point.py  _query_ray.py  _query_ray_furthest.py  _ray.py  _repair.py  _winding.py  _wrapping.py
src/liblaf/melon/triangle/: __init__.pyi  _boolean.py
src/liblaf/melon/utils/: __init__.py  __init__.pyi  _as_names.py  _attributes.py  _get_array.py  _toolz.py  _typing.py  _warp.py
src/liblaf/melon/xfer/: __init__.py  _tri_cell_to_tri_point.py  _tri_cell_to_tri_point_categorical.py  _tri_point_to_tet_point.py  _tri_point_to_tri_point.py
tests/: conftest.py  test_geometry_helpers.py  test_io_dispatch.py  test_volume_fraction.py
tests/_src/graph/: test_cell_neighbors.py
tests/ext/: test_mesh_fix.py
tests/io/convert/: test_convert_tri.py
tests/io/writer/: test_write_tri.py
tests/proximity/: test_on_surface.py
tests/tet/: test_flip.py  test_volume_fraction.py
tests/transfer/: test_tri_point_to_tet.py
tests/tri/: test_contains.py
(+898 files in other folders)
