#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-melon"
description = "🍉 A comprehensive Python library for 3D mesh processing with advanced I/O capabilities, proximity analysis, and integration with external mesh processing tools."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # potpourri3d does not provide wheels for Python 3.14
  # "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=25",
  "cyclopts>=4",
  "einops>=0.8",
  "jax>=0.9",
  "jaxtyping>=0.3",
  "jinja2>=3",
  "lazy-loader>=0.1",
  "liblaf-grapes>=9",
  "meshio>=5.3.5",
  "more-itertools>=10",
  "networkx>=3",
  "numpy>=2",
  "polars>=1",
  "potpourri3d>=1.3",
  "pydantic>=2.12",
  "pydicom>=3",
  "pymeshfix>=0.18",
  "pyvista>=0.47",
  "rich>=14",
  "scipy>=1.17",
  "trimesh[easy]>=4.11",
  "warp-lang>=1.12"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/melon/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/melon/"
"Homepage" = "https://github.com/liblaf/melon"
"Issue Tracker" = "https://github.com/liblaf/melon/issues"
"Release Notes" = "https://github.com/liblaf/melon/releases"
"Source Code" = "https://github.com/liblaf/melon"

[project.scripts]
melon = "liblaf.melon.cli:app.meta"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.9"]
cuda13 = ["jax[cuda13]>=0.9"]

[dependency-groups]
dev = ["liblaf-cherries>=1", "pygltflib>=1"]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = ["liblaf-mkdocs-preset>=0.3", "mkdocs>=1,<2"]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026"]
test = ["hypothesis>=6", "pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]
typing = ["scipy-stubs>=1"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.report]
exclude_also = ["@wp.func", "@wp.kernel"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/melon/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.melon"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.melon"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pyright]
extends = ".config/linters/pyrightconfig.json"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
conflicts = [[{ extra = "cuda12" }, { extra = "cuda13" }]]
default-groups = "all"
