#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-melon"
description = "Mesh processing helpers for PyVista, Trimesh, Warp, TetWild, PyMeshFix, and Faceform Wrap workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = ["mesh", "pyvista", "tetwild", "trimesh", "warp", "wrap"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=25",
  "cyclopts>=4",
  "einops>=0.8",
  "h5py>=3.16.0",
  "jaxtyping>=0.3.10",
  "jinja2>=3",
  "joblib>=1.5.3",
  "liblaf-logging>=0.1.2",
  "meshio>=5.3.5",
  "more-itertools>=10",
  "numpy>=2.4",
  "potpourri3d>=1.3",
  "pydicom>=3",
  "pymeshfix>=0.18",
  "pytetwild>=0.3.0",
  "pyvista>=0.47",
  "rich>=14",
  "scipy>=1.17",
  "toolz>=1.1",
  "torch>=2.12.0",
  "trimesh[easy]>=4.11",
  "warp-lang>=1.14"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/melon/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/melon/"
"Homepage" = "https://github.com/liblaf/melon"
"Issue Tracker" = "https://github.com/liblaf/melon/issues"
"Release Notes" = "https://github.com/liblaf/melon/releases"
"Source Code" = "https://github.com/liblaf/melon"

[project.scripts]
melon = "liblaf.melon.cli:app.meta"

[dependency-groups]
dev = ["icecream>=2.2.0", "liblaf-cherries>=3"]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.44"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15", "ty>=0.0.44"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = ["hypothesis>=6", "pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]
typing = ["scipy-stubs>=1", "toolz-stubs>=0.4.1"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.report]
exclude_also = ["@wp.func", "@wp.kernel"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/melon/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.melon"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.melon"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
default-groups = "all"
